Corrige método de update e inicialização de BD
